[package]
name = "postman_http"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_derive = "1.0.174"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"

[[bin]]
name = "postman_http"
path = "main.rs"
